[gd_scene load_steps=19 format=2]

[ext_resource path="res://Projectile.gd" type="Script" id=1]
[ext_resource path="res://smoke.png" type="Texture" id=2]
[ext_resource path="res://level_textures/cobblestone_floor_08_diff_1k.png" type="Texture" id=3]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 0.5

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
albedo_color = Color( 0.678431, 0.470588, 0.439216, 1 )
albedo_texture = ExtResource( 3 )
uv1_scale = Vector3( 0.5, 0.5, 0.5 )

[sub_resource type="SphereMesh" id=3]
material = SubResource( 2 )
radius = 0.25
height = 0.5

[sub_resource type="SphereShape" id=4]
radius = 0.25

[sub_resource type="SphereShape" id=5]
radius = 1.5

[sub_resource type="Gradient" id=6]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 5.0
damping = 8.05
angle = 720.0
angle_random = 1.0
color_ramp = SubResource( 7 )

[sub_resource type="SpatialMaterial" id=9]
flags_transparent = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0.227451, 0.227451, 0.227451, 0.784314 )
albedo_texture = ExtResource( 2 )

[sub_resource type="QuadMesh" id=10]
material = SubResource( 9 )

[sub_resource type="Gradient" id=11]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=13]
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 5.0
initial_velocity_random = 1.0
damping = 8.05
angle = 720.0
angle_random = 1.0
color_ramp = SubResource( 12 )

[sub_resource type="SpatialMaterial" id=14]
flags_transparent = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 1, 0.4, 0, 1 )
albedo_texture = ExtResource( 2 )

[sub_resource type="QuadMesh" id=15]
material = SubResource( 14 )

[node name="Projectile" type="RigidBody"]
collision_layer = 8
collision_mask = 3
mass = 0.01
physics_material_override = SubResource( 1 )
can_sleep = false
linear_damp = 0.0
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 3 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 4 )

[node name="Lifetime" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Area" type="Area" parent="."]

[node name="CollisionShape2" type="CollisionShape" parent="Area"]
shape = SubResource( 5 )

[node name="Particles" type="Particles" parent="."]
emitting = false
amount = 64
one_shot = true
explosiveness = 1.0
randomness = 1.0
visibility_aabb = AABB( -1.5, -1.5, -1.6, 3, 3, 3.2 )
local_coords = false
process_material = SubResource( 8 )
draw_pass_1 = SubResource( 10 )

[node name="Particles2" type="Particles" parent="."]
emitting = false
amount = 128
one_shot = true
explosiveness = 1.0
randomness = 1.0
visibility_aabb = AABB( -1.5, -1.5, -1.6, 3, 3, 3.2 )
local_coords = false
process_material = SubResource( 13 )
draw_pass_1 = SubResource( 15 )

[node name="ExplodeTime" type="Timer" parent="."]

[node name="OmniLight" type="OmniLight" parent="."]
visible = false
light_color = Color( 1, 0.4, 0, 1 )
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
[connection signal="timeout" from="ExplodeTime" to="." method="_on_ExplodeTime_timeout"]
